--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,13 +1,18 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!
-{% endblock %}
-
 {% block body %}
-<div class="evaluation-box container">
-    {{form_start(form)}}
-    {{form_row(form)}}
-    <button type="submit">Valider</button>
-    {{form_end(form)}}
+<div class="container-custom">
+	<!-- Le front du formulaire ce gère uniquement dans le twig, donc les etoile doivent ce gérer ci-dessous -->
+	<!-- Le composant form offre la possibilité de gérer certaine option qui ont ou peuvent avoir une interraction avec le front -->
+	<!-- Mais cela doit rester pour du nécessaire au fonctionnement back et non pour le fonctionnement du front -->
+	{{form_start(form)}}
+	<span class="title"> Comment étais votre expérience</span>
+	{{form_widget(form.score)}}
+	<span class="rate-text"></span>
+	{{form_widget(form.comment)}}
+	<button type="submit" class="btn btn-primary">POSTER</button>
+	{{form_end(form)}}
 </div>
+
+<script src="{{ asset('js/script.js') }}"></script>
 {% endblock %}
